# diff

./: Makefile.am  README.md  conf_script  configure  configure.ac
src/: Makefile.am  common.h  config_app.h  main.cpp
src/CDiff/: CDiff.cpp  CDiff.h
src/CFile/: CFile.cpp  CFile.h
src/CLogger/: Logger.h
src/Logger/: Logger.cpp  Logger.h
